# scietex.hal.vfd

./: .gitignore  README.md  pyproject.toml  pytest.ini  tox.ini
examples/: intek_example.py
src/scietex/hal/vfd/: __init__.py
src/scietex/hal/vfd/base/: data.py  rs485.py
src/scietex/hal/vfd/intek/: __init__.py  spe_b.py
src/scietex/hal/vfd/vesper/: __init__.py  e5_8200.py
tests/: test_version.py
